# Tim

./: CMakeLists.txt  Makefile  readme.txt  tim
nethept/small/: graph_ic.inf
output/: clustering.m  infadjlist.csv  infmatrix.csv  infvalue.csv  rrset.csv
src/: expon.h  graph.h  head.h  infgraph.h  tim.cpp  timgraph.h
src/sfmt/: a.cpp
